Clase arreglado routes

--- a/src/app/component/shared/shared.menu.unrouted/shared.menu.unrouted.component.html
+++ b/src/app/component/shared/shared.menu.unrouted/shared.menu.unrouted.component.html
@@ -8,14 +8,14 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-         <!-- <a class="nav-link" [class.active]="
+          <a class="nav-link" [class.active]="
               strRuta == '/home' || strRuta == '/' || strRuta == ''
             " aria-current="page" href="/home">Inicio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" [class.active]="strRuta == '/admin/empresa/plist'"
-            href="/src/app/component/empresa/empresa.admin.plist.routed/">Usuarios</a>
-            -->
+          <a class="nav-link" 
+            href="/admin/empresa/plist">Empresas</a>
+            
         </li>
       </ul>
     </div>
