--- a/src/app/component/shared/shared.menu.unrouted/shared.menu.unrouted.component.html
+++ b/src/app/component/shared/shared.menu.unrouted/shared.menu.unrouted.component.html
@@ -5,6 +5,7 @@
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
+
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
@@ -13,9 +14,11 @@
             " aria-current="page" href="/home">Inicio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" 
+          <a class="nav-link" [class.active]="
+            strRuta == '/admin/empresa/plist'" 
             href="/admin/empresa/plist">Empresas</a>
-            
+
+
         </li>
       </ul>
     </div>
