--- a/src/app/component/empresa/empresa.admin.create.routed/empresa.admin.create.routed.component.html
+++ b/src/app/component/empresa/empresa.admin.create.routed/empresa.admin.create.routed.component.html
@@ -6,7 +6,7 @@
         Creación de Empresa
         <i class="bi bi-person-circle"></i>
       </h2>
-      <form [formGroup]="oEmpresaForm" (ngSubmit)="onSubmit()" novalidate>
+      <form [formGroup]="oEmpresaForm!" (ngSubmit)="onSubmit()" novalidate>
         <div class="row mt-4">
           <mat-form-field>
             <mat-label>Nombre de la Empresa</mat-label>
@@ -22,7 +22,6 @@
           </mat-form-field>
         </div>
         
-        /* Sector */
         <div formGroupName="sector">
           <div class="row mt-4">
             <mat-form-field>
