--- a/src/app/component/empresa/empresa.admin.create.routed/empresa.admin.create.routed.component.html
+++ b/src/app/component/empresa/empresa.admin.create.routed/empresa.admin.create.routed.component.html
@@ -34,7 +34,7 @@
               </div>
               <div class="d-flex justify-content-start">
               </div>
-
+                {{ oSector?.id }} - {{ oSector?.nombre }}
               <input matInput formControlName="id" placeholder="Tipo Cuenta" />
             </mat-form-field>
           </div>
