--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,8 @@
 @import "bootstrap-icons/font/bootstrap-icons.css";
 @import "primeng/resources/themes/lara-light-blue/theme.css";
 @import "primeng/resources/primeng.css";
+@import "../node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css";
+
 
 html, body { height: 100%; font-size: 0.9rem;}
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;}
