--- a/src/app/component/empresa/empresa.admin.plist.routed/empresa.admin.plist.routed.component.html
+++ b/src/app/component/empresa/empresa.admin.plist.routed/empresa.admin.plist.routed.component.html
@@ -121,8 +121,7 @@
             <tr>
               <td class="text-center">{{ empresa.id }}</td>
               <td class="text-start">{{ empresa.nombre | trim : 20 }}</td>
-              <td class="text-start" style="font-size: small">
-                {{ empresa.email }}
+              <td class="text-start" style="font-size: small">{{ empresa.email }}
               </td>
 
               <td class="text-start" style="font-size: small">
