--- a/src/app/component/shared/shared.menu.unrouted/shared.menu.unrouted.component.html
+++ b/src/app/component/shared/shared.menu.unrouted/shared.menu.unrouted.component.html
@@ -17,8 +17,12 @@
           <a class="nav-link" [class.active]="
             strRuta == '/admin/empresa/plist'" 
             href="/admin/empresa/plist">Empresas</a>
+        </li>
 
-
+        <li class="nav-item">
+          <a class="nav-link" [class.active]="
+            strRuta == '/admin/sector/plist'" 
+            href="/admin/sector/plist">Sectores</a>
         </li>
       </ul>
     </div>
