--- a/src/app/component/sector/sector.admin.selector.unrouted/sector.admin.selector.unrouted.component.html
+++ b/src/app/component/sector/sector.admin.selector.unrouted/sector.admin.selector.unrouted.component.html
@@ -1,4 +1,4 @@
-ng<div class="container mt-5 d-flex align-items-center justify-content-center">
+<div class="container mt-5 d-flex align-items-center justify-content-center">
   <div class="row">
     <div class="col text-center">
       <h2 class="my-2">
