--- a/src/app/component/empresa/empresa.admin.create.routed/empresa.admin.create.routed.component.html
+++ b/src/app/component/empresa/empresa.admin.create.routed/empresa.admin.create.routed.component.html
@@ -10,18 +10,16 @@
         <div class="row mt-4">
           <mat-form-field>
             <mat-label>Nombre de la Empresa</mat-label>
-            <input
-              matInput
-              formControlName="nombre"
-              placeholder="Nombre de la Empresa..."
-            />
+            <input matInput formControlName="nombre" placeholder="Nombre de la Empresa..." />
             <mat-hint align="start">De 3 caracteres a 50 caracteres</mat-hint>
             <mat-error *ngIf="oEmpresaForm?.get('nombre')?.hasError('required')">Este campo es obligatorio</mat-error>
-            <mat-error *ngIf="oEmpresaForm?.get('nombre')?.hasError('minlength')">El nombre debe ser más largo</mat-error>
-            <mat-error *ngIf="oEmpresaForm?.get('nombre')?.hasError('maxlength')">El nombre debe ser más corto</mat-error>
+            <mat-error *ngIf="oEmpresaForm?.get('nombre')?.hasError('minlength')">El nombre debe ser más
+              largo</mat-error>
+            <mat-error *ngIf="oEmpresaForm?.get('nombre')?.hasError('maxlength')">El nombre debe ser más
+              corto</mat-error>
           </mat-form-field>
         </div>
-        
+
         <div formGroupName="sector">
           <div class="row mt-4">
             <mat-form-field>
@@ -34,7 +32,7 @@
               </div>
               <div class="d-flex justify-content-start">
               </div>
-                {{ oSector?.id }} - {{ oSector?.nombre }}
+              {{ oSector?.id }} - {{ oSector?.nombre }}
               <input matInput formControlName="id" placeholder="Tipo Cuenta" />
             </mat-form-field>
           </div>
@@ -43,22 +41,16 @@
         <div class="row mt-4">
           <mat-form-field>
             <mat-label>Email</mat-label>
-            <input
-              matInput
-              formControlName="email"
-              placeholder="Email de la empresa"
-              required
-            />
+            <input matInput formControlName="email" placeholder="Email de la empresa" required />
             <mat-hint align="start">Formato email</mat-hint>
             <mat-error *ngIf="oEmpresaForm?.get('email')?.hasError('required')">Debes introducir un email</mat-error>
-            <mat-error *ngIf="oEmpresaForm?.get('email')?.hasError('email')">Debes introducir un email correcto</mat-error>
+            <mat-error *ngIf="oEmpresaForm?.get('email')?.hasError('email')">Debes introducir un email
+              correcto</mat-error>
           </mat-form-field>
         </div>
         <br />
-        <button
-          class="btn btn-warning mt-4 mx-1"
-          [routerLink]="['/admin', 'Empresa', 'plist']"
-        >
+
+        <button class="btn btn-warning mt-4 mx-1" [routerLink]="['/admin', 'Empresa', 'plist']">
           <i class="bi bi-list"></i>
           Ir a listado de Empresas
         </button>
@@ -68,14 +60,30 @@
           Reset
         </button>
 
-        <button
-          class="btn btn-primary mt-4 mx-1"
-          type="submit"
-          [disabled]="!oEmpresaForm?.valid"
-        >
-        <i class="bi bi-floppy"></i>
+        <button class="btn btn-primary mt-4 mx-1" type="submit" [disabled]="!oEmpresaForm?.valid">
+          <i class="bi bi-floppy"></i>
           Guardar
         </button>
+        
+        <div class="modal fade" [id]="'mimodal'" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Contante</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"
+                  (click)="hideModal()"></button>
+              </div>
+              <div class="modal-body">
+                <p>{{ strMessage }}</p>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-primary" data-bs-dismiss="modal" (click)="hideModal()">
+                  Cerrar
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
       </form>
     </div>
   </div>
