--- a/src/app/component/empresa/empresa.admin.view.routed/empresa.admin.view.routed.component.html
+++ b/src/app/component/empresa/empresa.admin.view.routed/empresa.admin.view.routed.component.html
@@ -1,3 +1,51 @@
-<p>
-  empresa.admin.view.routed works!
-</p>
+<div class="row justify-content-center m-3">
+  <div class="col-lg-7 col-md-10 col-sm-12">
+    <h1 class="my-5 text-center">
+      Vista de la Empresa con Id: {{ oEmpresa.id }}
+    </h1>
+    
+    <br />
+    <table *ngIf="oEmpresa" class="table table-striped table-bordered my-5 text-center">
+      <tbody>
+        <tr class="text-center">
+          <th scope="row" class="bg-danger text-white text-end pe-5">Id</th>
+          <td class="text-start ps-5">{{ oEmpresa.id }}</td>
+        </tr>
+        <tr class="text-center">
+          <th scope="row" class="bg-primary text-white text-end pe-5">
+            Nombre
+          </th>
+          <td class="text-start ps-5">{{ oEmpresa.nombre }}</td>
+        </tr>
+        <tr class="text-center">
+          <th scope="row" class="bg-primary text-white text-end pe-5">
+            Correo
+          </th>
+          <td class="text-start ps-5">{{ oEmpresa.email }}</td>
+        </tr>
+        <tr class="text-center">
+          <th scope="row" class="bg-primary text-white text-end pe-5">
+            Sector
+          </th>
+          <td class="text-start ps-5">{{ oEmpresa.sector?.nombre }}</td>
+        </tr>
+      </tbody>
+    </table>
+    
+  </div>
+
+  <div class="d-flex justify-content-center mt-4">
+    <a class="btn btn-warning mt-4 mx-1" href="admin/empresa/plist">
+      <i class="bi bi-list"></i>
+      Ir a listado de Empresas
+    </a>
+    <a class="btn btn-primary mt-4 mx-1" href="admin/empresa/edit/{{ oEmpresa.id }}">
+      <i class="bi bi-pencil"></i>
+      Editar
+    </a>
+    <a class="btn btn-danger mt-4 mx-1" href="admin/empresa/delete/{{ oEmpresa.id }}">
+      <i class="bi bi-trash"></i>
+      Borrar
+    </a>
+  </div>
+</div>
