--- a/src/app/component/empresa/empresa.admin.plist.routed/empresa.admin.plist.routed.component.html
+++ b/src/app/component/empresa/empresa.admin.plist.routed/empresa.admin.plist.routed.component.html
@@ -125,7 +125,7 @@
               </td>
 
               <td class="text-start" style="font-size: small">
-                {{ empresa.sector }}
+                {{ empresa.sector.nombre }}
               </td>
 
               <td>
