--- a/src/app/component/empresa/empresa.admin.create.routed/empresa.admin.create.routed.component.html
+++ b/src/app/component/empresa/empresa.admin.create.routed/empresa.admin.create.routed.component.html
@@ -50,7 +50,7 @@
         </div>
         <br />
 
-        <button class="btn btn-warning mt-4 mx-1" [routerLink]="['/admin', 'Empresa', 'plist']">
+        <button class="btn btn-warning mt-4 mx-1" [routerLink]="['/admin', 'empresa', 'plist']">
           <i class="bi bi-list"></i>
           Ir a listado de Empresas
         </button>
