--- a/src/app/component/shared/shared.menu.unrouted/shared.menu.unrouted.component.html
+++ b/src/app/component/shared/shared.menu.unrouted/shared.menu.unrouted.component.html
@@ -24,6 +24,12 @@
             strRuta == '/admin/sector/plist'" 
             href="/admin/sector/plist">Sectores</a>
         </li>
+
+        <li class="nav-item">
+          <a class="nav-link" [class.active]="
+            strRuta == '/admin/alumno/plist'" 
+            href="/admin/alumno/plist">Alumnos</a>
+        </li>
       </ul>
     </div>
   </div>
