--- a/src/app/component/alumno/alumno.admin.delete.routed/alumno.admin.delete.routed.component.html
+++ b/src/app/component/alumno/alumno.admin.delete.routed/alumno.admin.delete.routed.component.html
@@ -37,7 +37,7 @@
   </div>
 
   <div class="d-flex justify-content-center mt-4">
-    <p class="fs-3">¿Seguro que desea borrar la alumno con nombre "{{ oAlumno!.nombre }}"?</p>
+    <p class="fs-3">¿Seguro que desea borrar al alumno con nombre "{{ oAlumno!.nombre }}"?</p>
   </div>
 
   <div class="d-flex justify-content-center mt-4">
