--- a/src/app/component/shared/shared.menu.unrouted/shared.menu.unrouted.component.html
+++ b/src/app/component/shared/shared.menu.unrouted/shared.menu.unrouted.component.html
@@ -30,6 +30,18 @@
             strRuta == '/admin/alumno/plist'" 
             href="/admin/alumno/plist">Alumnos</a>
         </li>
+
+        <li class="nav-item">
+          <a class="nav-link" [class.active]="
+            strRuta == '/admin/oferta/plist'" 
+            href="/admin/oferta/plist">Ofertas</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" [class.active]="
+            strRuta == '/admin/candidatura/plist'" 
+            href="/admin/candidatura/plist">Candidaturas</a>
+        </li>
       </ul>
     </div>
   </div>
