--- a/src/app/component/alumno/alumno.admin.view.routed/alumno.admin.view.routed.component.html
+++ b/src/app/component/alumno/alumno.admin.view.routed/alumno.admin.view.routed.component.html
@@ -1,3 +1,63 @@
-<p>
-  alumno.admin.view.routed works!
-</p>
+<div class="row justify-content-center m-3">
+  <div class="col-lg-7 col-md-10 col-sm-12">
+    <h1 class="my-5 text-center">
+      Vista del Alumno con Id: {{ oAlumno.id }}
+    </h1>
+    
+    <br />
+    <table *ngIf="oAlumno" class="table table-striped table-bordered my-5 text-center">
+      <tbody>
+        <tr class="text-center">
+          <th scope="row" class="bg-danger text-white text-end pe-5">Id</th>
+          <td class="text-start ps-5">{{ oAlumno.id }}</td>
+        </tr>
+        <tr class="text-center">
+          <th scope="row" class="bg-primary text-white text-end pe-5">
+            Nombre
+          </th>
+          <td class="text-start ps-5">{{ oAlumno.nombre }}</td>
+        </tr>
+        <tr class="text-center">
+          <th scope="row" class="bg-primary text-white text-end pe-5">
+            Primer Apellido
+          </th>
+          <td class="text-start ps-5">{{ oAlumno.ape1 }}</td>
+
+        </tr>
+        <tr class="text-center">
+          <th scope="row" class="bg-primary text-white text-end pe-5">
+            Segundo Apellido
+          </th>
+          <td class="text-start ps-5">{{ oAlumno.ape2 }}</td>
+        <tr class="text-center">
+          <th scope="row" class="bg-primary text-white text-end pe-5">
+            Correo
+          </th>
+          <td class="text-start ps-5">{{ oAlumno.email }}</td>
+        </tr>
+        <tr class="text-center">
+          <th scope="row" class="bg-primary text-white text-end pe-5">
+            Sector
+          </th>
+          <td class="text-start ps-5">{{ oAlumno.sector?.nombre }}</td>
+        </tr>
+      </tbody>
+    </table>
+    
+  </div>
+
+  <div class="d-flex justify-content-center mt-4">
+    <a class="btn btn-warning mt-4 mx-1" href="admin/alumno/plist">
+      <i class="bi bi-list"></i>
+      Ir a listado de Alumnos
+    </a>
+    <a class="btn btn-primary mt-4 mx-1" href="admin/alumno/edit/{{ oAlumno.id }}">
+      <i class="bi bi-pencil"></i>
+      Editar
+    </a>
+    <a class="btn btn-danger mt-4 mx-1" href="admin/alumno/delete/{{ oAlumno.id }}">
+      <i class="bi bi-trash"></i>
+      Borrar
+    </a>
+  </div>
+</div>
