--- a/src/app/component/sector/sector.admin.plist.routed/sector.admin.plist.routed.component.html
+++ b/src/app/component/sector/sector.admin.plist.routed/sector.admin.plist.routed.component.html
@@ -17,7 +17,7 @@
                 ID
               </th>
               <th class="bg-danger text-white">
-                Nombre empresa
+                Nombre Sector
               </th>
               <th class="bg-success text-white">
                 Empresas
