--- a/src/app/component/empresa/empresa.admin.create.routed/empresa.admin.create.routed.component.html
+++ b/src/app/component/empresa/empresa.admin.create.routed/empresa.admin.create.routed.component.html
@@ -33,7 +33,7 @@
               <div class="d-flex justify-content-start">
               </div>
               {{ oSector?.id }} - {{ oSector?.nombre }}
-              <input matInput formControlName="id" placeholder="Tipo Cuenta" />
+              <input matInput formControlName="id" placeholder="sector" />
             </mat-form-field>
           </div>
         </div>
@@ -69,7 +69,7 @@
           <div class="modal-dialog">
             <div class="modal-content">
               <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Contante</h5>
+                <h5 class="modal-title" id="exampleModalLabel">FormAndWork</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"
                   (click)="hideModal()"></button>
               </div>
