--- a/src/app/component/oferta/oferta.admin.view.routed/oferta.admin.view.routed.component.html
+++ b/src/app/component/oferta/oferta.admin.view.routed/oferta.admin.view.routed.component.html
@@ -42,15 +42,15 @@
   </div>
 
   <div class="d-flex justify-content-center mt-4">
-    <a class="btn btn-warning mt-4 mx-1" href="admin/alumno/plist">
+    <a class="btn btn-warning mt-4 mx-1" href="admin/oferta/plist">
       <i class="bi bi-list"></i>
       Ir a listado de Ofertas
     </a>
-    <a class="btn btn-primary mt-4 mx-1" href="admin/alumno/edit/{{ oOferta.id }}">
+    <a class="btn btn-primary mt-4 mx-1" href="admin/oferta/edit/{{ oOferta.id }}">
       <i class="bi bi-pencil"></i>
       Editar
     </a>
-    <a class="btn btn-danger mt-4 mx-1" href="admin/alumno/delete/{{ oOferta.id }}">
+    <a class="btn btn-danger mt-4 mx-1" href="admin/oferta/delete/{{ oOferta.id }}">
       <i class="bi bi-trash"></i>
       Borrar
     </a>
