--- a/src/app/component/sector/sector.admin.plist.routed/sector.admin.plist.routed.component.html
+++ b/src/app/component/sector/sector.admin.plist.routed/sector.admin.plist.routed.component.html
@@ -13,10 +13,10 @@
           style="table-layout: fixed; width: 100%; word-break: break-all">
           <thead>
             <tr>
-              <th class="bg-danger text-white">
+              <th class="bg-primary text-white">
                 ID
               </th>
-              <th class="bg-danger text-white">
+              <th class="bg-primary text-white">
                 Nombre Sector
               </th>
               <th class="bg-success text-white">
