--- a/src/app/component/oferta/oferta.xsector.admin.plist.routed/oferta.xsector.admin.plist.routed.component.html
+++ b/src/app/component/oferta/oferta.xsector.admin.plist.routed/oferta.xsector.admin.plist.routed.component.html
@@ -1,9 +1,9 @@
 <div class="container mt-5 d-flex align-items-center justify-content-center">
   <div class="row">
     <div class="col text-center">
-      <h2 class="my-2">   
+      <h2 class="my-2">
         <i class="bi bi-list"></i>
-        Lista de Alumnos por sector
+        Lista de Ofertas en el sector
         <i class="bi bi-person-circle"></i>
       </h2>
 
@@ -79,45 +79,38 @@
                 } @else {
                 <i class="bi bi-caret-up-fill"></i>} }
               </th>
-              <th (click)="sort('nombre')" class="bg-primary text-white">
-                Nombre alumno @if (strField === 'nombre') { @if (strDir === 'desc') {
+              <th (click)="sort('titulo')" class="bg-primary text-white">
+                Titulo oferta @if (strField === 'titulo') { @if (strDir === 'desc') {
                 <i class="bi bi-caret-down-fill"></i>
                 } @else {
                 <i class="bi bi-caret-up-fill"></i>} }
               </th>
 
-              <th (click)="sort('ape1')" class="bg-primary text-white">
-                Apellido @if (strField === 'ape1') { @if (strDir === 'desc') {
+              <th (click)="sort('descripcion')" class="bg-primary text-white">
+                Descripcion @if (strField === 'descripcion') { @if (strDir === 'desc') {
+                <i class="bi bi-caret-down-fill"></i>
+                } @else {
+                <i class="bi bi-caret-up-fill"></i>} }
+              </th>
+        
+              <th (click)="sort('sector.nombre')" class="bg-primary text-white">
+                Sector @if (strField === 'sector.nombre') { @if (strDir === 'desc') {
                 <i class="bi bi-caret-down-fill"></i>
                 } @else {
                 <i class="bi bi-caret-up-fill"></i>} }
               </th>
 
-              <th (click)="sort('ape2')" class="bg-primary text-white">
-                Apellido 2 @if (strField === 'ape2') { @if (strDir === 'desc') {
+              <th (click)="sort('empresa.nombre')" class="bg-primary text-white">
+                Empresa @if (strField === 'empresa.nombre') { @if (strDir === 'desc') {
                 <i class="bi bi-caret-down-fill"></i>
                 } @else {
                 <i class="bi bi-caret-up-fill"></i>} }
               </th>
 
-              <th (click)="sort('email')" class="bg-primary text-white">
-                Correo @if (strField === 'email') { @if (strDir === 'desc') {
-                <i class="bi bi-caret-down-fill"></i>
-                } @else {
-                <i class="bi bi-caret-up-fill"></i>} }
-              </th>
-
-              <th (click)="sort('sector')" class="bg-primary text-white">
-                sector @if (strField === 'sector') { @if (strDir
-                === 'desc') {
-                <i class="bi bi-caret-down-fill"></i>
-                } @else {
-                <i class="bi bi-caret-up-fill"></i>} }
-              </th>
 
               <th (click)="sort('acciones')" class="bg-primary text-white">
                 Acciones
-                @if (strField === 'accipones') { @if (strDir === 'desc') {
+                 @if (strField === 'accipones') { @if (strDir === 'desc') {
                 <i class="bi bi-caret-down-fill"></i>
                 } @else {
                 <i class="bi bi-caret-up-fill"></i>} }
@@ -127,27 +120,22 @@
           </thead>
 
           <tbody>
-            @for (alumno of oPage?.content; track alumno.id) {
+            @for (oferta of oPage?.content; track oferta.id) {
             <tr>
-              <td class="text-center">{{ alumno.id }}</td>
-              <td class="text-start">{{ alumno.nombre | trim : 20 }}</td>
-              <td class="text-start">{{ alumno.ape1 | trim : 20 }}</td>
-              <td class="text-start">{{ alumno.ape2 | trim : 20 }}</td>
-              <td class="text-start" style="font-size: small">{{ alumno.email }}
-              </td>
-              <td class="text-start" style="font-size: small">
-                {{ alumno.sector.nombre }}
-              </td>
-
+              <td class="text-center">{{ oferta.id }}</td>
+              <td class="text-start">{{ oferta.titulo | trim : 20 }}</td>
+              <td class="text-start" style="font-size: small">{{oferta.descripcion | trim : 100 }}</td>
+              <td class="text-start" style="font-size: small">{{ oferta.sector.nombre | trim : 30 }}</td>
+              <td class="text-start" style="font-size: small">{{ oferta.empresa.nombre| trim : 30 }}</td>
               <td>
                 <div class="btn-group" role="group" aria-label="Basic example">
-                  <button type="button" class="btn btn-success" (click)="view(alumno)">
+                  <button type="button" class="btn btn-success" (click)="view(oferta)">
                     <i class="bi bi-eye icon-15"></i>
                   </button>
-                  <button type="button" class="btn btn-warning icon-15" (click)="edit(alumno)">
+                  <button type="button" class="btn btn-warning icon-15" (click)="edit(oferta)">
                     <i class="bi bi-pen"></i>
                   </button>
-                  <button type="button" class="btn btn-danger icon-15" (click)="remove(alumno)">
+                  <button type="button" class="btn btn-danger icon-15" (click)="remove(oferta)">
                     <i class="bi bi-trash"></i>
                   </button>
                 </div>
@@ -155,7 +143,7 @@
             </tr>
             } @empty {
             <tr>
-              <td colspan="6">No hay alumnos</td>
+              <td colspan="6">No hay ofertas</td>
             </tr>
             }
           </tbody>
