--- a/src/app/component/candidatura/candidatura.admin.plist.routed/candidatura.admin.plist.routed.component.html
+++ b/src/app/component/candidatura/candidatura.admin.plist.routed/candidatura.admin.plist.routed.component.html
@@ -121,7 +121,7 @@
             <tr>
               <td class="text-center">{{ candidatura.id }}</td>
               <td class="text-start">{{ candidatura.fecha }}</td>
-              <td class="text-start">{{ candidatura.oferta.titulo}}</td>
+              <td class="text-start">{{ candidatura.oferta?.titulo }}</td>
               <td class="text-start">{{ candidatura.alumno.nombre + " " +candidatura.alumno.ape1 + " " +candidatura.alumno.ape2 }}</td>
 
               <td>
